エラーメッセージ実装

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,18 @@
 <h1>ユーザー新規登録画面</h1>
 
 <%= form_with(model: @user, local: true) do |f| %>
+
+  <% if @user.errors.any? %>
+    <div class="error-messages">
+      <h2><%= @user.errors.count %>件のエラーがあります</h2>
+      <ul>
+        <% @user.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :name %>
   <%= f.text_field :name %>
 
