--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,5 @@
 <h1>ブログ投稿画面</h1>
-<%= form_with(model:Blog.new,local: true) do |f|%>
+<%= form_with(model:@blog,local: true) do |f|%>
 
 <%=f.label :title %>
 <%=f.text_field :title %>
