--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,13 +1,5 @@
 <h1>ブログ更新画面</h1>
 
-<%= form_with(model:@blog,local: true) do |f|%>
-
-<%=f.label :title %>
-<%=f.text_field :title %>
-
-<%=f.label :content %>
-<%=f.text_field :content %>
-
-<%= f.submit "登録"%>
+<%= render 'form' %>
 
 <%end%>
