--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,5 +3,6 @@
 
 <p>タイトル:<%=@blog.title %></p>
 <p>内容:<%=@blog.content%></p>
+<p>投稿ユーザー:<%=@blog.user.name%></p>
 
 <p><%=link_to "編集",edit_blog_path(@blog.id)%></p>
