tops/indexに削除リンク追加

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -5,12 +5,15 @@
 <p><%= notice %></p>
 
 <% @blog.each do |blog| %>
+<div>
   <tr>
     <td><%= blog.user.name %></td>
     <td><%= blog.title %></td>
     <td><%= blog.content %></td>
     <td><%= link_to "詳細ページ", blog_path(blog.id) %></td>
+    <td><%= link_to "削除する", blog_path(blog.id), method: :delete, data: { confirm: "一度削除すると元には戻せません。本当に削除してもいいですか？" } %></td>
   </tr>
+</div>
 <% end %>
 
 <p><%= link_to "投稿する", new_blog_path %>
